@@ -28,15 +28,18 @@ dependencies {
 }
 
 javafx {
-    version = "21"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    version = "21.0.6"
+    modules = [ 'javafx.controls' ]
 }
 
 application {
     mainClass = 'com.pixelflux.Launcher'
     applicationDefaultJvmArgs = [
             '-Dfile.encoding=UTF-8',
-            '-Xdock:name=PixelFlux'
+            '-Xdock:name=PixelFlux',
+            '-XX:+TieredCompilation',
+            '-XX:TieredStopAtLevel=1', // 💡 GUI 시작 즉시 가속
+            '-Xverify:none'            // 바이트코드 검증 스킵
     ]
 }
 
